# secret-santa-service

./: .env  Cargo.toml  LICENSE.md  README.md
server/: Cargo.toml
server/src/: crud.rs  main.rs  models.rs  routes.rs
server/src/sql/: create.sql  drop.sql
