[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
rand = "0.8.5"
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
dotenvy = "0.15"
log = "0.4"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = [ "derive" ] }
sqlx = { version = "0.6.2", features = [ "runtime-async-std-native-tls", "sqlite" ] }